--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -19,5 +19,5 @@ jobs:
       - run: echo "finished npm i."
       - run: npm run build
       - run: echo "finished npm build."
-      - run: npm run start
+      - run: npm run start &
       - run: echo "started the project"
