--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,9 +1,17 @@
 name: GitHub Actions Demo
-on: [push]
+on: 
+  push:
+    branches:
+      - develop
+  pull_request:
+    branches:
+      - develop
 jobs:
-  Explore-GitHub-Actions:
+  build:
     runs-on: self-hosted
+
     steps:
+      - uses: actions/checkout@v2
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
