--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -18,6 +18,7 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
+        uses: actions/setup-node@v1
       - run: npm i 
       - run: echo finished npm i."
       - run: npm run build
