--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -22,8 +22,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm i 
-      - run: echo finished npm i."
+      - run: echo "finished npm i."
       - run: npm run build
-      - run: echo finished npm build."
+      - run: echo "finished npm build."
       - run: npm run start
       - run: started the project"
