--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -6,6 +6,18 @@ on:
   pull_request:
     branches:
       - develop
+env:
+  POSTGRES_HOST: database-1.clujym4xkmgv.us-east-1.rds.amazonaws.com
+  POSTGRES_PORT: 5432
+  DB_TYPE: postgres
+  POSTGRES_USER: postgres
+  POSTGRES_PASSWORD: postgres
+  POSTGRES_DATABASE: nest
+  MODE: DEV
+  RUN_MIGRATIONS: true
+  TYPEORM_SYNC: true
+  TYPEORM_LOGGING: true
+  PORT: 3000
 jobs:
   build:
     runs-on: self-hosted
