--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -12,7 +12,7 @@ env:
   DB_TYPE: postgres
   POSTGRES_USER: postgres
   POSTGRES_PASSWORD: postgres
-  POSTGRES_DATABASE: nest
+  POSTGRES_DATABASE: nset
   MODE: DEV
   RUN_MIGRATIONS: true
   TYPEORM_SYNC: true
