--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -29,5 +29,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - run: npm install
       - run: npm run build
       - run: pm2 restart all
