--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-POSTGRES_HOST='localhost'
+POSTGRES_HOST=database-1.clujym4xkmgv.us-east-1.rds.amazonaws.com
 POSTGRES_PORT=5432
 DB_TYPE='postgres'
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_DATABASE=nest
+POSTGRES_DATABASE=nset
 MODE=DEV
 RUN_MIGRATIONS=true
 TYPEORM_SYNC=true
