--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,8 +1,8 @@
 name: GitHub Actions Demo
 on: 
-  push:
-    branches:
-      - develop
+  # push:
+  #   branches:
+  #     - develop
   # pull_request:
   #   branches:
   #     - develop
