--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -15,9 +15,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
-      - uses: actions/cache@v3
         with:
           node-version: 14
+      - uses: actions/cache@v3
+        with:
           cache: 'npm'
       - run: npm install
       - run: npm run build
