--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -14,24 +14,23 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 14
-      - name: cache node modules
-        id: myCacheStep
+
+      - name: Cache node modules
         uses: actions/cache@v3
-        env: 
+        env:
           cache-name: cache-node-modules
         with:
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          # npm cache files are stored in `~/.npm` on Linux/macOS
           path: ~/.npm
-          warn-if-changed: true
-          restore-keys: | 
-            ${{ runner.os }}-build-${{ env.name }}-
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
-            ${{ runner.os }}
-      - name: install node modules
-        if: steps.myCacheStep.outputs.cache-hit != 'true'
+            ${{ runner.os }}-
+
+      - name: Install Dependencies
         run: npm install
-      - run: npm run build
+
+      - name: Build
+        run: npm run build
       - run: pm2 restart all
